--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@ code {
 .container {
   max-width: 900px;
   margin: 0 auto;
+  padding: 20px;
 }
 
 .meals {
@@ -32,12 +33,9 @@ code {
   margin: 0 -15px;
 }
 
-.item {
+.col-4 {
   width: 33.33%;
-  /*margin: 10px 0 10px 15px;*/
-
-  padding: 30px 15px 0 15px;
-  /*height: 460px;*/
+  padding: 15px 15px;
 }
 
 .meal-item {
@@ -46,12 +44,17 @@ code {
 }
 
 .meal-item button {
-  bottom: 0;
+  margin: auto 0 0;
 }
-.item img {
-  text-align: center;
-  max-width: 100%;
-  height: 300px;
+/*.item img {*/
+/*  text-align: center;*/
+/*  max-width: 100%;*/
+/*  height: 300px;*/
+
+/*}*/
+
+.meal-item img {
+  width: 100%;
   border-radius: 10px;
 }
 
@@ -59,6 +62,9 @@ code {
   padding: 20px;
   color: white;
   height: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
 }
 
 button {
@@ -102,7 +108,7 @@ body {
 }
 
 .meal {
-  padding: 30px;
+  /*padding: 30px;*/
   color: azure;
 }
 
@@ -142,7 +148,17 @@ body {
 .ingr {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  /*justify-content: space-around;*/
+  gap: 21px;
+  align-items: center;
+}
+
+.show-more-ingredients {
+  display: flex;
+  flex-wrap: wrap;
+  /*justify-content: space-around;*/
+  gap: 15px;
+  align-items: center;
 }
 
 .ingredient p {
@@ -185,4 +201,49 @@ body {
 .ingredient-desc h2{
   padding-top: 20px ;
   text-align: center;
+}
+
+.modal-video-movie-wrap {
+  padding-bottom: 0 !important;
+}
+
+.modal-video-close-btn {
+  display: none;
+}
+
+iframe {
+  /*width: 50%;*/
+  width: 100% !important;
+  height: 100%;
+  border-radius: 10px;
+}
+
+.modal-video {
+  padding-top: 20px;
+}
+header {
+  padding: 30px 0;
+  /*background: black;*/
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.search {
+  border-radius: unset;
+  padding: 5px 12px;
+}
+
+.header input {
+  border: none;
+  padding: 5px;
+}
+
+.show-more {
+  padding: 0;
+  background: unset;
+  cursor: pointer;
 }
